Your descriptive commit message here

--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
 
 
 
-    <div class="container">
-        <div id="theMemoContainer"></div>
+    <div class="GContainer">
+        <div class="container">
+            <div id="theMemoContainer"></div>
+        </div>
         <div id="TheBorder"></div>
     </div>
     
